--- a/angular/src/app/feature-post/edit-post/edit-post.component.html
+++ b/angular/src/app/feature-post/edit-post/edit-post.component.html
@@ -1,48 +1,51 @@
-<h1 mat-dialog-title>Editar Postagem</h1>
+<h1 mat-dialog-title>
+  Editar Postagem
+  <!-- Botão de Fechar no topo -->
+  <button mat-icon-button mat-dialog-close class="close-btn">
+    <mat-icon>close</mat-icon>
+  </button>
+</h1>
 <div mat-dialog-content>
   <form [formGroup]="editPostForm">
     <!-- Exibição de imagens -->
     <div *ngIf="data?.images?.length > 0" class="image-container">
-      <div *ngFor="let image of data.images" class="image-item">
-        <img src="{{'data:image/jpg;base64,' + image.image}}" alt="Image" class="image" />
+      <div *ngFor="let image of data.images; let i = index" class="image-item">
+        <img src="{{ 'data:image/jpg;base64,' + image.image }}" alt="Image" class="image" />
+        <button mat-icon-button color="warn" (click)="removeImage(i)" *ngIf="data.view">
+          <mat-icon>delete</mat-icon>
+        </button>
       </div>
     </div>
 
     <!-- Título -->
-    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE; else titleView">
+    <div >
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>Título</mat-label>
         <input matInput formControlName="title" placeholder="Digite o título da postagem">
       </mat-form-field>
     </div>
-    <ng-template #titleView>
-      <h1>{{ editPostForm.get('title')?.value || 'Sem título' }}</h1>
-    </ng-template>
+
 
     <!-- Subtítulo -->
-    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE; else subtitleView">
+    <div >
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>Subtítulo</mat-label>
         <input matInput formControlName="subtitle" placeholder="Digite o subtítulo">
       </mat-form-field>
     </div>
-    <ng-template #subtitleView>
-      <h2>{{ editPostForm.get('subtitle')?.value || 'Sem subtítulo' }}</h2>
-    </ng-template>
+
 
     <!-- Conteúdo -->
-    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE; else contentView">
+    <div >
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>Conteúdo</mat-label>
         <textarea matInput formControlName="content" rows="4" placeholder="Digite o conteúdo"></textarea>
       </mat-form-field>
     </div>
-    <ng-template #contentView>
-      <p>{{ editPostForm.get('content')?.value || 'Sem conteúdo' }}</p>
-    </ng-template>
+
 
     <!-- Tag -->
-    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+    <div >
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>Tag</mat-label>
         <input matInput formControlName="tag" placeholder="Digite uma tag">
@@ -50,14 +53,14 @@
     </div>
 
     <!-- Ativo -->
-    <div class="form-row" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+    <div class="form-row" >
       <mat-slide-toggle formControlName="approval">
         Ativo
       </mat-slide-toggle>
     </div>
 
     <!-- Escolher arquivo -->
-    <div class="upload-container" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+    <div class="upload-container" >
       <button mat-raised-button color="primary" (click)="fileInput.click()">
         Escolher Novo Arquivo
       </button>
@@ -69,10 +72,18 @@
         hidden
       />
     </div>
+    <div *ngIf="selectedFiles.length > 0" class="file-list">
+      <p *ngFor="let file of selectedFiles; let i = index">
+        {{ file.name }}
+        <button mat-icon-button color="warn" (click)="removeFile(i)">
+          <mat-icon>close</mat-icon>
+        </button>
+      </p>
+    </div>
   </form>
 </div>
 
-<div mat-dialog-actions align="end" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+<div mat-dialog-actions align="end" >
   <button mat-button mat-dialog-close>Cancelar</button>
   <button
     mat-raised-button
