--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -11,29 +11,41 @@
   </mat-form-field>
 </div>
 
-<mat-card>
+<mat-card style="border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
   <mat-card-content>
-    <div style="text-align: center">
+    <div style="text-align: center; padding: 20px;">
 
-      <!-- Tabela -->
-      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="listarDados()">
-        <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center" mat-sort-header>{{ columnNamesMapping[column] }}</th>
-          <td mat-cell *matCellDef="let element" style="text-align: center">{{ element[column] }}</td>
-        </ng-container>
+      <!-- Tabela Responsiva -->
+      <div class="table-container" style="overflow-x: auto; width: 100%; margin-bottom: 20px;">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="listarDados()" style="width: 100%; border-spacing: 0; border-collapse: collapse;">
+          <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+            <th mat-header-cell *matHeaderCellDef style="text-align: center; background-color: #388E3C; color: white; padding: 12px; font-weight: bold;" mat-sort-header>
+              {{ columnNamesMapping[column] }}
+            </th>
+            <td mat-cell *matCellDef="let element" style="text-align: center; padding: 10px; border-bottom: 1px solid #e0f2f1;">
+              {{ element[column] }}
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="acao" *ngIf="getShowActions()">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center"> Ação </th>
-          <td mat-cell *matCellDef="let element" style="display:flex; flex-direction: row; justify-content: center">
-            <button mat-raised-button (click)="editar(element)" style="background-color: #1976D2; color: white; justify-content: end; border-radius: 20px" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE"><mat-icon>edit</mat-icon></button>
-            <button mat-raised-button (click)="excluir(element)" style="background-color: #D32F2F; color:white; justify-content: flex-end; border-radius: 20px" *ngIf="permissionConfig.HAS_PERMISSION_DELETE"><mat-icon>delete</mat-icon></button>
-            <button mat-raised-button (click)="exportarPdf(element.id)" style="background-color: #388E3C; color:white; justify-content: end; border-radius: 20px" *ngIf="getShowExportPdf()"><mat-icon>picture_as_pdf</mat-icon></button>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="acao" *ngIf="getShowActions()">
+            <th mat-header-cell *matHeaderCellDef style="text-align: center; background-color: #388E3C; color: white; padding: 12px;"> Ação </th>
+            <td mat-cell *matCellDef="let element" style="display:flex; flex-direction: row; justify-content: center; padding: 10px; border-bottom: 1px solid #e0f2f1;">
+              <button mat-raised-button (click)="editar(element)" style="background-color: #2069d8; color: white; border-radius: 20px; margin-right: 10px;" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-raised-button (click)="excluir(element)" style="background-color: #d32f2f; color:white; border-radius: 20px; margin-right: 10px;" *ngIf="permissionConfig.HAS_PERMISSION_DELETE">
+                <mat-icon>delete</mat-icon>
+              </button>
+              <button mat-raised-button (click)="exportarPdf(element.id)" style="background-color: #388E3C; color:white; border-radius: 20px;" *ngIf="getShowExportPdf()">
+                <mat-icon>picture_as_pdf</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns.concat(getShowActions() ? ['acao'] : [])"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns.concat(getShowActions() ? ['acao'] : []);"></tr>
-      </table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns.concat(getShowActions() ? ['acao'] : [])"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns.concat(getShowActions() ? ['acao'] : []);"></tr>
+        </table>
+      </div>
 
       <!-- Paginação -->
       <mat-paginator [pageSize]="pageSize"
@@ -44,8 +56,9 @@
                      (page)="onPageChange($event)">
       </mat-paginator>
 
-      <div *ngIf="getShowActions()" style="display: flex; justify-content: end; margin-top: 10px;">
-        <button mat-raised-button style="background-color: #167362; color: white; justify-content: flex-end; border-radius: 20px" class="button-incluir" (click)="incluir()" *ngIf="permissionConfig.HAS_PERMISSION_CREATE">
+      <!-- Botão de Ação -->
+      <div *ngIf="getShowActions()" style="display: flex; justify-content: flex-end; margin-top: 10px;">
+        <button mat-raised-button style="background-color: #388E3C; color: white; justify-content: flex-end; border-radius: 20px" class="button-incluir" (click)="incluir()" *ngIf="permissionConfig.HAS_PERMISSION_CREATE">
           <mat-icon>add</mat-icon>
         </button>
       </div>
