--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -13,31 +13,45 @@
 
 <mat-card style="border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
   <mat-card-content>
-    <div style="text-align: center; padding: 20px;">
+    <div style="padding: 20px;">
 
       <!-- Tabela Responsiva -->
       <div class="table-container" style="overflow-x: auto; width: 100%; margin-bottom: 20px;">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="listarDados()" style="width: 100%; border-spacing: 0; border-collapse: collapse;">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="listarDados()"
+               style="width: 100%; border-spacing: 0; border-collapse: collapse; table-layout: fixed;">
+
           <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-            <th mat-header-cell *matHeaderCellDef style="text-align: center; background-color: #388E3C; color: white; padding: 12px; font-weight: bold;" mat-sort-header>
+            <th mat-header-cell *matHeaderCellDef
+                style="text-align: center; background-color: #388E3C; color: white; padding: 12px; font-weight: bold; border-bottom: 2px solid #ffffff;">
               {{ columnNamesMapping[column] }}
             </th>
-            <td mat-cell *matCellDef="let element" style="text-align: center; padding: 10px; border-bottom: 1px solid #e0f2f1;">
+            <td mat-cell *matCellDef="let element"
+                style="text-align: center; padding: 10px; border-bottom: 1px solid #e0f2f1; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
               {{ element[column] }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="acao" *ngIf="getShowActions()">
-            <th mat-header-cell *matHeaderCellDef style="text-align: center; background-color: #388E3C; color: white; padding: 12px;"> Ação </th>
-            <td mat-cell *matCellDef="let element" style="display:flex; flex-direction: row; justify-content: center; padding: 10px; border-bottom: 1px solid #e0f2f1;">
-              <button mat-raised-button (click)="editar(element)" style="background-color: #2069d8; color: white; border-radius: 20px; margin-right: 10px;" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
-                <mat-icon>edit</mat-icon>
+            <th mat-header-cell *matHeaderCellDef
+                style="text-align: center; background-color: #388E3C; color: white; padding: 12px; border-bottom: 2px solid #ffffff;">
+              Ação
+            </th>
+            <td mat-cell *matCellDef="let element"
+                style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap; padding: 10px; gap: 10px; border-bottom: 1px solid #e0f2f1;">
+              <button mat-raised-button (click)="editar(element)"
+                      style="background-color: #2069d8; color: white; border-radius: 40%; width: 36px; height: 36px;"
+                      *ngIf="permissionConfig.HAS_PERMISSION_UPDATE" class="dale">
+                <mat-icon style="font-size: 18px;">edit</mat-icon>
               </button>
-              <button mat-raised-button (click)="excluir(element)" style="background-color: #d32f2f; color:white; border-radius: 20px; margin-right: 10px;" *ngIf="permissionConfig.HAS_PERMISSION_DELETE">
-                <mat-icon>delete</mat-icon>
+              <button mat-raised-button (click)="excluir(element)"
+                      style="background-color: #d32f2f; color:white; border-radius:40%; width: 36px; height: 36px;"
+                      *ngIf="permissionConfig.HAS_PERMISSION_DELETE">
+                <mat-icon style="font-size: 18px;">delete</mat-icon>
               </button>
-              <button mat-raised-button (click)="exportarPdf(element.id)" style="background-color: #388E3C; color:white; border-radius: 20px;" *ngIf="getShowExportPdf()">
-                <mat-icon>picture_as_pdf</mat-icon>
+              <button mat-raised-button (click)="exportarPdf(element.id)"
+                      style="background-color: #388E3C; color:white; border-radius: 40%; width: 36px; height: 36px;"
+                      *ngIf="getShowExportPdf()">
+                <mat-icon style="font-size: 18px;">picture_as_pdf</mat-icon>
               </button>
             </td>
           </ng-container>
@@ -58,7 +72,8 @@
 
       <!-- Botão de Ação -->
       <div *ngIf="getShowActions()" style="display: flex; justify-content: flex-end; margin-top: 10px;">
-        <button mat-raised-button style="background-color: #388E3C; color: white; justify-content: flex-end; border-radius: 20px" class="button-incluir" (click)="incluir()" *ngIf="permissionConfig.HAS_PERMISSION_CREATE">
+        <button mat-raised-button style="background-color: #388E3C; color: white; border-radius: 20px; height: 40px; padding: 0 15px;"
+                class="button-incluir" (click)="incluir()" *ngIf="permissionConfig.HAS_PERMISSION_CREATE">
           <mat-icon>add</mat-icon>
         </button>
       </div>
