refactor/arrumando detalhes

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -35,3 +35,5 @@
 <div *ngIf="!showLayout()" class="no-layout">
   <router-outlet></router-outlet>
 </div>
+
+<simple-notifications></simple-notifications>
