--- a/angular/src/app/feature-post/edit-post/edit-post.component.html
+++ b/angular/src/app/feature-post/edit-post/edit-post.component.html
@@ -70,6 +70,7 @@
         (change)="onFileSelected($event)"
         accept="image/*"
         hidden
+        multiple
       />
     </div>
     <div *ngIf="selectedFiles.length > 0" class="file-list">
