--- a/angular/src/app/feature-post/edit-post/edit-post.component.html
+++ b/angular/src/app/feature-post/edit-post/edit-post.component.html
@@ -8,10 +8,10 @@
 <div mat-dialog-content>
   <form [formGroup]="editPostForm">
     <!-- Exibição de imagens -->
-    <div *ngIf="data?.images?.length > 0" class="image-container">
-      <div *ngFor="let image of data.images; let i = index" class="image-item">
-        <img src="{{ 'data:image/jpg;base64,' + image.image }}" alt="Image" class="image" />
-        <button mat-icon-button color="warn" (click)="removeImage(i)" *ngIf="data.view">
+    <div *ngIf="selectedFiles.length > 0" class="image-container">
+      <div *ngFor="let image of selectedFiles.values(); let i = index" class="image-item">
+        <img src="{{image }}" alt="Image" class="image" />
+        <button mat-icon-button color="warn" (click)="removeImage(i)">
           <mat-icon>delete</mat-icon>
         </button>
       </div>
@@ -76,7 +76,7 @@
     <div *ngIf="selectedFiles.length > 0" class="file-list">
       <p *ngFor="let file of selectedFiles; let i = index">
         {{ file.name }}
-        <button mat-icon-button color="warn" (click)="removeFile(i)">
+        <button mat-icon-button color="warn" (click)="removeImage(i)">
           <mat-icon>close</mat-icon>
         </button>
       </p>
