--- a/angular/src/app/feature-user/edit-user/edit-user.component.html
+++ b/angular/src/app/feature-user/edit-user/edit-user.component.html
@@ -82,7 +82,7 @@
     </div>
 
     <div mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close style="background-color:  #1fd219; color: white;">Fechar</button>
+      <button mat-button mat-dialog-close style="background-color:  #d2191f; color: white;">Fechar</button>
       <button style="background-color:  #1976D2; color: white;" mat-button color="primary" type="submit" (click)="onSubmit()">
         {{ data ? 'Editar' : 'Cadastrar' }}
       </button>
