fix/correcao item

--- a/angular/src/app/about/about.component.html
+++ b/angular/src/app/about/about.component.html
@@ -10,8 +10,8 @@
       <ul>
         <li>Desenvolvido em Java com Spring no backend.</li>
         <li>Desenvolvido em TypeScript com Angular no backend.</li>
-        <li>Versão do projeto: xx.xx</li>
-        <li>Última atualização: xx/xx/xxxx</li>
+        <li>Versão do projeto: 0.0.1</li>
+        <li>Última atualização: 06/12/2024</li>
       </ul>
       <h1>Desenvolvido por: </h1>
       <div class="creator-grid">
