--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -25,7 +25,7 @@
       <span class="sidenav-text">Config Postagem</span>
     </a>
 
-    <a mat-list-item (click)="redirectToWhatsapp()" target="_blank">
+    <a mat-list-item (click)="redirectToWhatsapp()" >
       <mat-icon matListItemIcon>call</mat-icon>
       <span class="sidenav-text2">Contato</span>
     </a>
